[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio-util = { version = "0.7.12", features = ["io"] }
webrtc = "0.11.0"
v4l = "0.14.0"
openh264 = "0.6.2"
jpeg-decoder = "0.3.1"
